update jvm args